--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -1,5 +1,5 @@
 %!TEX root = ../paper.tex
-The traditional approach taken in the study of chemical reaction, gene-regulatory, population, and ecosystem networks is to derive a system of differential equations to model a particular biological network, attempt to fit that model to data and adjust the modeling assumptions along with parameter values until a good fit is achieved \cite{Meyer2014}. All of these models utilize essentially equivalent mathematical structures \ref{fig:biomodelexamples} \cite{RossCr2003,Palsson2011a,Sauro2012}. Developing unified mathematical descriptions of all of these is one of the paramount goals of systems biology.
+The traditional approach taken in the study of chemical reaction, gene-regulatory, population, and ecosystem networks is to derive a system of differential equations to model a particular biological network, attempt to fit that model to data and adjust the modeling assumptions along with parameter values until a good fit is achieved \cite{Meyer2014}. All of these models utilize essentially equivalent mathematical structures, \ref{fig:biomodelexamples}, \cite{RossCr2003,Palsson2011a,Sauro2012}. Developing unified mathematical descriptions of all of these is one of the paramount goals of systems biology.
 % \cite{RossCr2003,Alon2006,Palsson2006,HamidBolouri2008,Palsson2011a,Voit2012,Sauro2012}
 
 Recent work has demonstrated that as a result of the existence of largely insensitive directions within the parameter space for such models, the approach outlined above often allows for a large variety of models to fit equivalent data \cite{Machta2013,Hines2014,Prabakaran2014,Tonsing2014}. In addition, there is often uncertainty about the very structure of such networks. In this context, it is crucial to gain insight into what dynamical phenomena are possible to observe within a given class of dynamical systems, which is necessary to understand in order to determine whether or not a particular dynamical phenomenon should be regarded as unique or generic in the development and investigation of models applied to particular systems \cite{Gunawardena2013,Gunawardena2014}. This can be achieved using a method common in statistical physics involving the consideration of an ensemble of systems that, in comparison to one another, appear to have components that are randomly interlinked.
@@ -16,5 +16,5 @@ Some conclusions derived from this approach may be sensitive to the probability 
 % \label{fig:biomodelexamples}
 % \end{figure*}
 
-Here we determine the relationship between network hierarchy, a topological property, and the probability of \emph{robustness}, a dynamical property. Robustness is of interest in biological systems at all scales, and has been previously studied in the context of gene-regulatory networks \cite{VanNimwegen1999,Siegal2002,Wagner2013}. For the purpose of this investigation, we quantify dynamical robustness as the probability of stability to potentially large perturbations of the parameters for systems which have already been determined to be stable in the sense of linear stability analysis \cite{Davis1962}. The maximally hierarchical network is considered to be the graph associated to the total ordering, which is the complete directed acyclic graph for a given system size \cite{Cormen2009}. Hence, we use a measure of hierarchy based upon the edit distance from this maximally hierarchical network \cite{Axenovich2011}. We demonstrate that systems with the most hierarchical network topology according to this definition exhibit maximal robustness and explain why this results from an invariance of robustness to particular kinds of transformations of the network topology. Moreover these results hold for networks of arbitrary size and independent of the probability distribution from which the strengths of interaction are sampled.
+Here we determine the relationship between network hierarchy, a topological property, and the probability of \emph{robustness}, a dynamical property. Robustness is of interest in biological systems at all scales, and has been previously studied, for example, in the context of gene-regulatory networks \cite{VanNimwegen1999,Siegal2002,Wagner2013}. For the purpose of this investigation, we quantify dynamical robustness as the probability of stability to potentially large perturbations of the parameters for systems which have already been determined to be stable in the sense of linear stability analysis \cite{Davis1962}. The maximally hierarchical network is considered to be the graph associated to the total ordering, which is the complete directed acyclic graph for a given system size \cite{Cormen2009}. Hence, we use a measure of hierarchy based upon the edit distance from this maximally hierarchical network \cite{Axenovich2011}. We demonstrate that systems with the most hierarchical network topology according to this definition exhibit maximal robustness and explain why this results from an invariance of robustness to particular kinds of transformations of the network topology. Moreover these results hold for networks of arbitrary size and independent of the probability distribution from which the strengths of interaction are sampled.
 % \cite{WADDINGTON1942a,VanNimwegen1999,Siegal2002,Ciliberti2007b,Ciliberti2007,Wagner2013}
