--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -5,9 +5,9 @@ Our theory predicts that, in general, an ensemble of systems where robustness ha
 In the long term, this prediction may be evaluated using experimental evolution by comparing the degree of hierarchy that emerges in the evolution of gene regulatory network topology in the context of both static and fluctuating environments that differentially select for robustness \cite{Leroi1994}.
 
 %The fact that such a relationship exists has the potential to unify our understanding of biological networks.
-In order to further this work from a theoretical perspective, it will be necessary to deepen our understanding of the relationship between dynamical robustness and the underlying network topology.
+In order to further this work from a theoretical perspective, it will be necessary to deepen our understanding of the relationship between dynamical robustness and the underlying network topology. Following May \cite{Cohen1984,May1972a,Radius2014,Majumdar2014}, this will involve improving the general understanding of the relationship between perturbations to a system's structure and the qualitative changes in the dynamical phenomena it can produce.
 %One approach is to attempt to compute robustness for systems of larger size. Using existing methods, this would require large-scale Monte Carlo simulations. However,
-It may be possible to prove bounds on the robustness of individual SCCs, which could provide more precise knowledge about the relative robustness of different network architectures. The conservation of robustness with respect to nontrivial symmetries including the interchange of SCCs and permutation within SCCs suggests the existence of an evolutionary neutral space. A deeper mathematical characterization of the full symmetry groupoid of dynamical robustness may thus help to characterize this potential evolutionary constraint \cite{Golubitsky2006}.
+It may also be possible to prove bounds on the robustness of individual SCCs, which could provide more precise knowledge about the relative robustness of different network architectures. The conservation of robustness with respect to nontrivial symmetries including the interchange of SCCs and permutation within SCCs suggests the existence of an evolutionary neutral space. A deeper mathematical characterization of the full symmetry groupoid of dynamical robustness may thus help to characterize this potential evolutionary constraint \cite{Golubitsky2006}.
 
 The relationship between structure and function is fundamental to networks at every level of the biological hierarchy. Equally fundamental is the ability of systems to persist over long periods of time, which is dependent upon their dynamical robustness. Here we have demonstrated a structure-function relationship wherein biological networks that are more hierarchical are more robust and thus more likely to persist when this feature is the dominant object of selection in the evolutionary process.
 %Moreover, this result is formulated at a level of abstraction that allows its conclusions to apply independently to each of these levels.
