derive Jacobian for crn

--- a/header.tex
+++ b/header.tex
@@ -148,6 +148,8 @@ urlcolor=[rgb]{.09 .29 .54}}
 \renewcommand*{\figureautorefname}{Fig.}
 \renewcommand*{\equationautorefname}{Eq.}
 \renewcommand*{\tableautorefname}{Table}
+\renewcommand*{\sectionautorefname}{Sec.}
+\renewcommand*{\subsectionautorefname}{Sec.}
 
 \renewcommand{\refname}{References}
 
@@ -158,6 +160,7 @@ urlcolor=[rgb]{.09 .29 .54}}
         \renewcommand{\thefigure}{S\arabic{figure}}%
         \setcounter{equation}{0}
         \renewcommand{\theequation}{S\arabic{equation}}%
+        \renewcommand*{\sectionautorefname}{Sec.}
      }
 
 \def\tr{\mathrm{tr}}
