add figure reference to example of most hierarchical network

--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -16,5 +16,5 @@ Some conclusions derived from this approach may be sensitive to the probability 
 % \label{fig:biomodelexamples}
 % \end{figure*}
 
-Here we determine the relationship between network hierarchy, a topological property, and the probability of \emph{robustness}, a dynamical property. Robustness is of interest in biological systems at all scales, and has been previously studied in the context of biochemical reaction networks \cite{Shinar2010}, gene-regulatory networks \cite{VanNimwegen1999,Siegal2002,Wagner2013}, and ecological networks \cite{Rohr2014}. For the purpose of this investigation, we quantify dynamical robustness as the probability of stability to potentially large perturbations of the parameters for systems which have already been determined to be stable in the sense of linear stability analysis \cite{Davis1962}. The maximally hierarchical network is considered to be the graph associated to the total ordering, which is the complete directed acyclic graph for a given system size \cite{Cormen2009}. Hence, we use a measure of hierarchy based upon the edit distance from this maximally hierarchical network \cite{Axenovich2011}. We demonstrate that systems with the most hierarchical network topology according to this definition exhibit maximal robustness and explain why this results from an invariance of robustness to particular kinds of transformations of the network topology. Moreover these results hold for networks of arbitrary size and independent of the probability distribution from which the strengths of interaction are sampled.
+Here we determine the relationship between network hierarchy, a topological property, and the probability of \emph{robustness}, a dynamical property. Robustness is of interest in biological systems at all scales, and has been previously studied in the context of biochemical reaction networks \cite{Shinar2010}, gene-regulatory networks \cite{VanNimwegen1999,Siegal2002,Wagner2013}, and ecological networks \cite{Rohr2014}. For the purpose of this investigation, we quantify dynamical robustness as the probability of stability to potentially large perturbations of the parameters for systems which have already been determined to be stable in the sense of linear stability analysis \cite{Davis1962}. The maximally hierarchical network is considered to be the graph associated to the reflexive total ordering \cite{Cormen2009}. An example of this for three system components is shown in \reffigscc{} top. We use a measure of hierarchy based upon the edit distance from this maximally hierarchical network \cite{Axenovich2011}. We demonstrate that systems with the most hierarchical network topology according to this definition exhibit maximal robustness and explain why this results from an invariance of robustness to particular kinds of transformations of the network topology. Moreover these results hold for networks of arbitrary size and independent of the probability distribution from which the strengths of interaction are sampled.
 % \cite{WADDINGTON1942a,VanNimwegen1999,Siegal2002,Ciliberti2007b,Ciliberti2007,Wagner2013}
