add figure showing random Jacobians

--- a/tex/overview.tex
+++ b/tex/overview.tex
@@ -63,7 +63,7 @@ The network architecture represented in terms of the adjacency matrix, \ref{eq:l
 
 In the process of biological evolution, the parameter values $\vec{p}$ or the form of the functions $F_i$ corresponding to all different types of networks considered in \ref{fig:biomodelexamples} are subject to, potentially drastic, modifications due, for example, to mutations or environmental fluctuations. These changes may alter the capacity of a given system to achieve a stable steady state. In order to evaluate this we consider a stochastic process whereby for a given dynamical system associated to a stable matrix $A$, we consider a perturbation of the system leading to $A'$ where $\adj(G_A) = \adj(G_{A'})$. This corresponds to a dynamical system whose connectivity is preserved, but where the underlying model is defined in terms of a different vector of parameters ${\vec{p}}\,'$ (\refsupp{}). We then ask, for each distinct network topology on $n$ components, what is the probability, given $A$ is a stable matrix, that $A'$ is also a stable matrix. This probability is what we refer to as dynamical robustness.
 
-We have derived an analytical expression for dynamical robustness, $R_{tot}$, of a network in terms of its interaction graph as a weighted average of the robustness of the SCCs, $R_i$, the corresponding number of links within each SCC, $d_i$, and the number of links between the SCCs, $l$ the entries of the Jacobian are sampled independently from a generic probability distribution. The expression in \ref{eq:sccrobustness} holds for the case of simultaneously perturbing any number of elements of the Jacobian, but can be schematized for the case of perturbing a single element as \ref{eq:robschematic} (see \reffigscc$\,$ for examples demonstrating this expression)
+We have derived an analytical expression for dynamical robustness, $R_{tot}$, of a network in terms of its interaction graph as a weighted average of the robustness of the SCCs, $R_i$, the corresponding number of links within each SCC, $d_i$, and the number of links between the SCCs, $l$. The entries of the Jacobian are sampled independently from a generic probability distribution. Examples of vector fields that may result from this sampling of Jacobian matrices are shown in \ref{fig:jacobianvectorfields}. The expression in \ref{eq:sccrobustness} holds for the case of simultaneously perturbing any number of elements of the Jacobian, but can be schematized for the case of perturbing a single element as \ref{eq:robschematic} (see \reffigscc$\,$ for examples demonstrating this expression)
 \begin{equation}\label{eq:robschematic}
 R_{tot} = \frac{l+d_1 R_1 + d_2 R_2 + \cdots}{l+d_1 + d_2 + \cdots}.
 \end{equation}
