add showlabels package

--- a/header.tex
+++ b/header.tex
@@ -73,6 +73,9 @@ urlcolor=[rgb]{.09 .29 .54}}
 \usepackage{amsthm}
 \usepackage{bibunits}
 
+% http://goo.gl/GSA6bP
+% \usepackage[inline]{showlabels}
+
 % define colors
 \definecolor{DeepRed}{rgb}{.82,.14,.16}
 \definecolor{DeepBlue}{rgb}{0,0.36,0.62}
